# GridSpeak

./: .gitignore  README.md
app/: README.md  start.sh
app/backend/: auth.js  db.js  package-lock.json  package.json  server.js
app/backend/data/: gridspeak.db
app/backend/routes/: auth.js  members.js  messages.js  servers.js
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  styles.css
app/frontend/src/components/: ChannelView.tsx  LoginScreen.tsx  MainApp.tsx  MemberList.tsx  ServerSidebar.tsx
p2p/: README.md  start.sh
p2p/backend/: Cargo.toml
p2p/backend/crates/gridspeak-core/: Cargo.toml
p2p/backend/crates/gridspeak-core/src/: config.rs  lib.rs  message.rs  storage.rs
p2p/backend/crates/gridspeak-node/: Cargo.toml
p2p/backend/crates/gridspeak-node/src/: main.rs
p2p/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
p2p/frontend/src/: App.js  App.tsx  styles.css  types.ts
p2p/frontend/src/components/: ChannelHeader.js  ChannelHeader.tsx  Composer.js  Composer.tsx  MemberList.js  MemberList.tsx  MessageList.js  MessageList.tsx  Sidebar.js  Sidebar.tsx  StatusPanel.js  StatusPanel.tsx  VoiceVideoPanel.js  VoiceVideoPanel.tsx
p2p/frontend/src/hooks/: useBlocklist.js  useBlocklist.ts  useChannels.ts  useMessages.js  useMessages.ts  useNodeStatus.js  useNodeStatus.ts  useVoiceSignals.js  useVoiceSignals.ts
p2p/frontend/src/lib/: api.js  blocklist.js  blocklist.ts  utils.js  utils.ts
